feat: 🛠️ task-definition 수정

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -89,7 +89,7 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: task-definition.json
+          task-definition: ./src/main/resources/properties/dev-task-definition.json
           container-name: my-backend-contatiner
           image: ${{ steps.build-image.outputs.image }}
 
