feat: stable false

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -99,4 +99,4 @@ jobs:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: my-ecs-service
           cluster: dev_my_cluster
-          wait-for-service-stability: true
+          wait-for-service-stability: false
