--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,15 @@ repositories {
 
 dependencies {
     // spring
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -39,6 +44,9 @@ dependencies {
 
     // database
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // jackson
+    testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
 
     // RestDocs
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
