--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+    database-platform: org.hibernate.dialect.MySQLDialect
 
 management:
   endpoint:
