--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.4'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
+
+    id "io.spring.javaformat" version "0.0.40"
+    id "checkstyle"
 }
 
 group = 'com.my'
@@ -24,6 +27,8 @@ repositories {
 }
 
 dependencies {
+    checkstyle "io.spring.javaformat:spring-javaformat-checkstyle:0.0.40"
+    implementation "io.spring.javaformat:spring-javaformat-gradle-plugin:0.0.40"
     // spring
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -84,6 +89,12 @@ clean {
 test {
     outputs.dir snippetsDir
 }
+
+checkstyle {
+    toolVersion = "10.12.4"
+}
+
+checkstyleMain.source = fileTree('src/main/java')
 
 asciidoctor {
     inputs.dir snippetsDir
