--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -81,16 +81,16 @@ jobs:
           REPOSITORY: my-backend-ecr
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:latest .
-          docker push $REGISTRY/$REPOSITORY:latest
-          echo "image=$REGISTRY/$REPOSITORY:latest" >> $GITHUB_OUTPUT
+          docker build -t $REGISTRY/$REPOSITORY:${IMAGE_TAG} .
+          docker push $REGISTRY/$REPOSITORY:${IMAGE_TAG}
+          echo "image=$REGISTRY/$REPOSITORY:${IMAGE_TAG}" >> $GITHUB_OUTPUT
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: ./src/main/resources/properties/dev-task-definition.json
-          container-name: my-backend-contatiner
+          container-name: my-backend-container
           image: ${{ steps.build-image.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
