--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,4 +1,4 @@
-name: Backend CI
+name: My-Backend Deploy
 
 on:
   push:
@@ -8,33 +8,6 @@ permissions:
   contents: read
 
 jobs:
-  build:
-    name: CI
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Pull Repository
-        uses: actions/checkout@v3
-
-      - name: Checkout private tools
-        uses: actions/checkout@v3
-        with:
-          repository: hongmoSung/properties
-          token: ${{ secrets.ACTION_TOKEN }}
-          path: src/main/resources/properties
-          submodules: true
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2.10.0
-        with:
-          arguments: build
-
   deployment:
     name: CD
     runs-on: ubuntu-latest
