fix: 종속성 제거
The workflow must contain at least one job with no dependencies.

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -8,10 +8,9 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  deployment:
     name: CD
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
       - name: Pull Repository
